manifiesto/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Actividad_Industrial__c</fullName>
        <label>Actividad Industrial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agricultura</fullName>
                </value>
                <value>
                    <fullName>Ambiental</fullName>
                </value>
                <value>
                    <fullName>Biotecnología</fullName>
                </value>
                <value>
                    <fullName>Clínicas y Hospitales</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Construcción</fullName>
                </value>
                <value>
                    <fullName>Cuidado de la salud</fullName>
                </value>
                <value>
                    <fullName>Electrónica</fullName>
                </value>
                <value>
                    <fullName>Energía</fullName>
                </value>
                <value>
                    <fullName>Entretenimiento</fullName>
                </value>
                <value>
                    <fullName>Fabricación</fullName>
                </value>
                <value>
                    <fullName>Gobierno</fullName>
                </value>
                <value>
                    <fullName>Industria Alimenticia</fullName>
                </value>
                <value>
                    <fullName>Ingenieria</fullName>
                </value>
                <value>
                    <fullName>Maquinaria</fullName>
                </value>
                <value>
                    <fullName>Minería</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Productos Químicos</fullName>
                </value>
                <value>
                    <fullName>Recreación</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Tecnología</fullName>
                </value>
                <value>
                    <fullName>Telecomunicaciones</fullName>
                </value>
                <value>
                    <fullName>Transporte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_digo_de_Error__c</fullName>
        <description>Visible solo para el Admn y solo lectura</description>
        <label>Código de Error</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoSAP__c</fullName>
        <description>Identificador externo de SAP</description>
        <externalId>true</externalId>
        <label>Código SAP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripci_n__c</fullName>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Giro__c</fullName>
        <label>Giro</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mensaje_de_Error__c</fullName>
        <description>Solo visible para el admin del sistema y de solo lectura</description>
        <label>Mensaje de Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oficina_Depto_Otro__c</fullName>
        <label>Oficina/Depto./Otro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RUT_Razon_Social__c</fullName>
        <description>Este campo es validado por una regla de validación</description>
        <inlineHelpText>El formato es sin punto y con guión.</inlineHelpText>
        <label>RUT Razón Social</label>
        <length>11</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sociedad__c</fullName>
        <label>Sociedad</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oxiquim</fullName>
                </value>
                <value>
                    <fullName>Dilox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCategoria__c</fullName>
        <label>Sub Categoría</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ácidos</fullName>
                </value>
                <value>
                    <fullName>Bencina Blanca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>